--- a/views/one_twenty.erb
+++ b/views/one_twenty.erb
@@ -1,3 +1,9 @@
 <h1>1d20</h1>
 
-<p><%= @outcome %></p>
+<ul>
+  <% @rolls.each do |a_roll| %>
+    <li>
+      <%= a_roll %>
+    </li>
+  <% end %>
+</ul>
